--- a/Resources/Private/Language/Module/ListOfMembers/fr.locallang.xlf
+++ b/Resources/Private/Language/Module/ListOfMembers/fr.locallang.xlf
@@ -5,6 +5,14 @@
 			<authorName>Quebec.ca</authorName>
 		</header>
 		<body>
+		    <trans-unit id="listOfMembers" >
+                <source>List Of my groups members</source>
+                <target>La liste des membres de mes groupes</target>
+            </trans-unit>
+            <trans-unit id="listOfMembersDescription" >
+                <source>Displays the list of all members of my groups</source>
+                <target>Affiche la liste des membres de mes groupes</target>
+            </trans-unit>
             <trans-unit id="emailNotProvided" >
                 <source>Email not provided</source>
                 <target>Courriel non fourni</target>
@@ -16,6 +24,10 @@
             <trans-unit id="listOfMyTeamsMembers" >
                 <source>List of my groups members</source>
                 <target>La liste des membres de mes groupes</target>
+            </trans-unit>
+            <trans-unit id="listOfAdmins" >
+                <source>List of admins</source>
+                <target>La list des administrateurs</target>
             </trans-unit>
 		</body>
 	</file>
