--- a/Resources/Private/Language/Module/ListOfMembers/locallang.xlf
+++ b/Resources/Private/Language/Module/ListOfMembers/locallang.xlf
@@ -9,9 +9,9 @@
             <trans-unit id="listOfMembersDescription" >
                 <source>Displays the list of all members of my groups</source>
             </trans-unit>
-			<trans-unit id="emailNotProvided" >
-				<source>Email not provided</source>
-			</trans-unit>
+            <trans-unit id="emailNotProvided" >
+                <source>Email not provided</source>
+            </trans-unit>
             <trans-unit id="realNameNotProvided" >
                 <source>Real name not provided</source>
             </trans-unit>
@@ -21,8 +21,11 @@
             <trans-unit id="listOfAdmins" >
                 <source>List of admins</source>
             </trans-unit>
-            <trans-unit id="listOfMembers" >
-                <source>List of members</source>
+            <trans-unit id="users" >
+                <source>Users</source>
+            </trans-unit>
+            <trans-unit id="group" >
+                <source>Group :</source>
             </trans-unit>
 		</body>
 	</file>
