--- a/Resources/Private/Language/fr.locallang.xlf
+++ b/Resources/Private/Language/fr.locallang.xlf
@@ -13,6 +13,18 @@
                 <source>Qc Widgets</source>
                 <target>Qc Widgets</target>
             </trans-unit>
+            <trans-unit id="pageTitle" >
+               <source>Page title</source>
+               <target>Titre de page</target>
+            </trans-unit>
+            <trans-unit id="creationDate" >
+               <source>Creation date</source>
+               <target>Date de création</target>
+            </trans-unit>
+            <trans-unit id="modificationDate" >
+              <source>Last modification date</source>
+              <target>Date de la dernière modification</target>
+            </trans-unit>
 		</body>
 	</file>
 </xliff>
