--- a/Resources/Private/Language/Module/ListOfMembers/locallang.xlf
+++ b/Resources/Private/Language/Module/ListOfMembers/locallang.xlf
@@ -27,6 +27,9 @@
             <trans-unit id="group" >
                 <source>Group :</source>
             </trans-unit>
+            <trans-unit id="membersOfMyGroups" >
+                <source>Members of my groups</source>
+            </trans-unit>
 		</body>
 	</file>
 </xliff>
