--- a/Resources/Private/Language/fr.locallang.xlf
+++ b/Resources/Private/Language/fr.locallang.xlf
@@ -14,8 +14,8 @@
                 <target>Qc Widgets</target>
             </trans-unit>
             <trans-unit id="pageTitle" >
-               <source>Page title</source>
-               <target>Titre de page</target>
+               <source>Title</source>
+               <target>Titre</target>
             </trans-unit>
             <trans-unit id="creationDate" >
                <source>Creation date</source>
@@ -25,6 +25,26 @@
               <source>Last modification date</source>
               <target>Date de la dernière modification</target>
             </trans-unit>
+            <trans-unit id="lastCreatedPageInMyGroup" >
+               <source>Last created pages in my groups</source>
+               <target>Dernières pages créées dans mes groupes</target>
+            </trans-unit>
+            <trans-unit id="myLastPages" >
+                 <source>My last pages</source>
+                 <target>Mes dernières pages</target>
+             </trans-unit>
+             <trans-unit id="status" >
+                  <source>Status</source>
+                  <target>Statut</target>
+             </trans-unit>
+             <trans-unit id="expired" >
+                <source>Expired</source>
+                <target>Expirée</target>
+             </trans-unit>
+             <trans-unit id="hidden" >
+                 <source>Hidden</source>
+                 <target>Cachée</target>
+             </trans-unit>
 		</body>
 	</file>
 </xliff>
