code cleaning, refactoring

--- a/Resources/Private/Language/Module/ListOfMembers/fr.locallang.xlf
+++ b/Resources/Private/Language/Module/ListOfMembers/fr.locallang.xlf
@@ -5,10 +5,6 @@
 			<authorName>Quebec.ca</authorName>
 		</header>
 		<body>
-            <trans-unit id="listOfMembers" >
-                <source>List Of my groups members</source>
-                <target>La liste des membres de mes groupes</target>
-            </trans-unit>
             <trans-unit id="listOfMembersDescription" >
                 <source>Displays the list of all members of my groups</source>
                 <target>Affiche la liste des membres de mes groupes</target>
@@ -41,6 +37,10 @@
                 <source>Members of my groups</source>
                 <target>Les membres de mes groupes</target>
             </trans-unit>
+           <trans-unit id="userHasNeverLoggedIn">
+               <source>User has never logged in</source>
+               <target>L'utilisateur n'a jamais se connecter</target>
+           </trans-unit>
 		</body>
 	</file>
 </xliff>
