--- a/Resources/Private/Language/Module/ListOfWorkspacePreviewLinks/locallang.xlf
+++ b/Resources/Private/Language/Module/ListOfWorkspacePreviewLinks/locallang.xlf
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-	<file source-language="en" datatype="plaintext" original="EXT:qc_widgets/Resources/Private/Language/Module/locallang.xlf" date="2021-09-15T18:22:34Z" product-name="qcinforights">
+	<file source-language="en" datatype="plaintext" original="EXT:qc_widgets/Resources/Private/Language/Module/locallang.xlf" date="2021-09-15T18:22:34Z">
 		<header/>
 		<body>
             <trans-unit id="workspace">
                 <source>Workspace</source>
             </trans-unit>
-             <trans-unit id="link">
-                <source>Link</source>
-            </trans-unit>
              <trans-unit id="expirationDate">
                 <source>Expiration date</source>
             </trans-unit>
-            <trans-unit id="keyword">
-                <source>Keyword</source>
+            <trans-unit id="key">
+                <source>Key</source>
             </trans-unit>
+
 		</body>
 	</file>
 </xliff>
