--- a/Resources/Private/Language/fr.locallang.xlf
+++ b/Resources/Private/Language/fr.locallang.xlf
@@ -17,6 +17,14 @@
                <source>Title</source>
                <target>Titre</target>
             </trans-unit>
+            <trans-unit id="listOfMembers" >
+                <source>List Of my groups members</source>
+                <target>La liste des membres de mes groupes</target>
+            </trans-unit>
+            <trans-unit id="listOfMyWorkspaceLinks">
+              <source>List of my workspace preview links</source>
+              <target>Liste de mes liens d'aperçu de l'espace de travail</target>
+            </trans-unit>
             <trans-unit id="creationDate" >
                <source>Creation date</source>
                <target>Date de création</target>
@@ -45,6 +53,14 @@
                  <source>Hidden</source>
                  <target>Cachée</target>
              </trans-unit>
+           <trans-unit id="visible" >
+               <source>Visible</source>
+                <target>Visible</target>
+           </trans-unit>
+           <trans-unit id="noResult" >
+               <source>No result returned</source>
+               <target>No résultat retourné</target>
+           </trans-unit>
 		</body>
 	</file>
 </xliff>
