code refactoring, add tsconfig option

--- a/Resources/Private/Language/Module/ListOfWorkspacePreviewLinks/fr.locallang.xlf
+++ b/Resources/Private/Language/Module/ListOfWorkspacePreviewLinks/fr.locallang.xlf
@@ -17,7 +17,10 @@
               <source>Keyword</source>
               <target>Clé</target>
            </trans-unit>
-
+            <trans-unit id="listOfMyWorkspaceLinks">
+              <source>List of my workspace preview links</source>
+              <target>Liste de mes liens d'aperçu de l'espace de travail</target>
+            </trans-unit>
 		</body>
 	</file>
 </xliff>
