--- a/Resources/Private/Language/fr.locallang.xlf
+++ b/Resources/Private/Language/fr.locallang.xlf
@@ -10,8 +10,8 @@
                 <target>Qc Widgets</target>
             </trans-unit>
             <trans-unit id="qcWidgetsDescription" >
-                <source>Qc Widgets</source>
-                <target>Qc Widgets</target>
+                <source>Set of widget provided by Qc Widgets, to display a bunch of tables</source>
+                <target>Ensemble de widget fourni par Qc Widgets, pour afficher un tas de tableaux</target>
             </trans-unit>
             <trans-unit id="pageTitle" >
                <source>Title</source>
