--- a/Resources/Private/Language/Module/ListOfMembers/locallang.xlf
+++ b/Resources/Private/Language/Module/ListOfMembers/locallang.xlf
@@ -15,6 +15,9 @@
             <trans-unit id="listOfMyTeamsMembers" >
                 <source>List of my groups members</source>
             </trans-unit>
+            <trans-unit id="listOfAdminsMembers" >
+                <source>List of Admins</source>
+            </trans-unit>
             <trans-unit id="listOfAdmins" >
                 <source>List of admins</source>
             </trans-unit>
