--- a/Resources/Private/Language/Module/ListOfWorkspacePreviewLinks/locallang.xlf
+++ b/Resources/Private/Language/Module/ListOfWorkspacePreviewLinks/locallang.xlf
@@ -15,6 +15,9 @@
             <trans-unit id="listOfMyWorkspaceLinks">
                 <source>List of my workspace preview links</source>
             </trans-unit>
+            <trans-unit id="listOfMyWorkspaceLinksDescription">
+                <source>Displays the list of the workspace preview links my groups members</source>
+            </trans-unit>
 		</body>
 	</file>
 </xliff>
