--- a/Resources/Private/Language/fr.locallang.xlf
+++ b/Resources/Private/Language/fr.locallang.xlf
@@ -30,8 +30,8 @@
               <target>Date de la dernière modification</target>
             </trans-unit>
             <trans-unit id="lastCreatedPageInMyGroup" >
-               <source>Last created pages in my groups</source>
-               <target>Les dernières pages créées par mes groupes</target>
+               <source>Last pages created in my groups</source>
+               <target>Dernières pages créées dans mes groupes</target>
             </trans-unit>
             <trans-unit id="lastCreatedPageInMyGroupDescription" >
                <source>Displays the list latest created pages by my groups members</source>
@@ -61,13 +61,25 @@
                  <source>Hidden</source>
                  <target>Cachée</target>
              </trans-unit>
-           <trans-unit id="visible" >
-               <source>Visible</source>
-                <target>Visible</target>
+           <trans-unit id="actif" >
+               <source>Actif</source>
+                <target>Actif</target>
            </trans-unit>
            <trans-unit id="noResult" >
-               <source>No result returned</source>
-               <target>Non résultat retourné</target>
+               <source>No result</source>
+               <target>Aucun résultat</target>
+           </trans-unit>
+           <trans-unit id="stop" >
+               <source>Stop</source>
+               <target>Arrêt</target>
+           </trans-unit>
+           <trans-unit id="start" >
+               <source>Start</source>
+               <target>Lancement</target>
+           </trans-unit>
+           <trans-unit id="days" >
+               <source>Days</source>
+               <target>Jours</target>
            </trans-unit>
 		</body>
 	</file>
