code refactoring, add translation files

--- a/Resources/Private/Language/Module/LastCreatedPages/fr.locallang.xlf
+++ b/Resources/Private/Language/Module/LastCreatedPages/fr.locallang.xlf
@@ -5,26 +5,14 @@
 			<authorName>Quebec.ca</authorName>
 		</header>
 		<body>
-           <trans-unit id="workspace">
-               <source>Workspace</source>
-               <target>Espace de travail</target>
+           <trans-unit id="lastCreatedPageInMyGroup" >
+              <source>Last pages created in my groups</source>
+              <target>Dernières pages créées dans mes groupes</target>
            </trans-unit>
-            <trans-unit id="expirationDate">
-               <source>Expiration date</source>
-               <target>Date d'expiration</target>
+           <trans-unit id="lastCreatedPageInMyGroupDescription" >
+              <source>Displays the list latest created pages by my groups members</source>
+              <target>Affiche la liste des dernières pages créées par les memberes de mes groupes</target>
            </trans-unit>
-           <trans-unit id="key">
-              <source>Keyword</source>
-              <target>Clé</target>
-           </trans-unit>
-            <trans-unit id="listOfMyWorkspaceLinks">
-              <source>List of workspace previews</source>
-              <target>List des aperçus d'espace de travail</target>
-            </trans-unit>
-            <trans-unit id="listOfMyWorkspaceLinksDescription">
-                <source>Displays the list of the workspace preview links my groups members</source>
-                <target>Affiche la liste de mes liens d'aperçu de l'espace de travail créés par les membres de mes groupes</target>
-            </trans-unit>
 		</body>
 	</file>
 </xliff>
