--- a/Resources/Private/Language/Module/ListOfMembers/locallang.xlf
+++ b/Resources/Private/Language/Module/ListOfMembers/locallang.xlf
@@ -3,6 +3,9 @@
 	<file source-language="en" datatype="plaintext" original="EXT:qc_widgets/Resources/Private/Language/Module/locallang.xlf" date="2021-09-15T18:22:34Z" >
 		<header/>
 		<body>
+            <trans-unit id="listOfMembers" >
+                <source>List of my groups members</source>
+            </trans-unit>
             <trans-unit id="listOfMembersDescription" >
                 <source>Displays the list of all members of my groups</source>
             </trans-unit>
