--- a/Resources/Private/Language/Module/PagesWithoutModification/locallang.xlf
+++ b/Resources/Private/Language/Module/PagesWithoutModification/locallang.xlf
@@ -3,21 +3,18 @@
 	<file source-language="en" datatype="plaintext" original="EXT:qc_widgets/Resources/Private/Language/Module/locallang.xlf" date="2021-09-15T18:22:34Z">
 		<header/>
 		<body>
-            <trans-unit id="workspace">
-                <source>Workspace</source>
+            <trans-unit id="pagesWithoutModification" >
+                <source>Pages without modification</source>
             </trans-unit>
-             <trans-unit id="expirationDate">
-                <source>Expiration date</source>
+            <trans-unit id="pagesWithoutModificationDescription" >
+                <source>Displays the list of pages without modification for a specified number of months</source>
             </trans-unit>
-            <trans-unit id="key">
-                <source>Key</source>
+            <trans-unit id="pagesWitouhtModificationFor" >
+               <source>Pages without modification in the last </source>
             </trans-unit>
-            <trans-unit id="listOfMyWorkspaceLinks">
-                <source>List of workspace previews</source>
-            </trans-unit>
-            <trans-unit id="listOfMyWorkspaceLinksDescription">
-                <source>Displays the list of the workspace preview links my groups members</source>
-            </trans-unit>
+           <trans-unit id="months" >
+                    <source>months</source>
+           </trans-unit>
 		</body>
 	</file>
 </xliff>
