--- a/Resources/Private/Language/Module/ListOfMembers/fr.locallang.xlf
+++ b/Resources/Private/Language/Module/ListOfMembers/fr.locallang.xlf
@@ -7,7 +7,7 @@
 		<body>
             <trans-unit id="listOfMembers">
                 <source>List of my groups members</source>
-                <target>La liste des membres de mes groupes</target>
+                <target>Liste des membres de mes groupes</target>
             </trans-unit>
             <trans-unit id="listOfMembersDescription" >
                 <source>Displays the list of all members of my groups</source>
